--- a/ripple-android/local.properties
+++ b/ripple-android/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 18 18:52:46 PDT 2017
-sdk.dir=C\:\\Users\\Brian Chan\\AppData\\Local\\Android\\Sdk
+#Sat Mar 18 21:25:55 PDT 2017
+sdk.dir=C\:\\Users\\alto1\\AppData\\Local\\Android\\Sdk
